# GenAI

./: CLAUDE.md
.claude/agents/: code-reviewer.md  security-reviewer.md  tdd-developer.md  test-reviewer.md
.claude/commands/: build-fix.md  commit.md  review.md  tdd.md  wrap.md
.claude/rules/: coding-style.md  git-workflow.md  security.md  testing.md
sdy/agent/: CLAUDE.md  README.md  pyproject.toml
sdy/agent/src/agent/: cli.py  pipeline.py  report.py
sdy/agent/src/agent/core/: agent.py  parser.py  types.py
sdy/agent/src/agent/llm/: client.py  prompts.py
sdy/agent/src/agent/tools/: clinical_trials.py  pubmed.py  registry.py  types.py
sdy/agent/tests/: test_agent.py  test_clinical_trials.py  test_llm_client.py  test_parser.py  test_pipeline.py  test_pubmed.py  test_registry.py  test_report.py
sdy/rag/: README.md  pyproject.toml
sdy/rag-langchain/: pyproject.toml
sdy/rag-langchain/src/rag_langchain/: __init__.py  chain.py  cli.py  ingestion.py  llm.py  pipeline.py
sdy/rag-langchain/tests/: test_chain.py  test_cli.py  test_ingestion.py  test_llm.py  test_pipeline.py
sdy/rag-llamaindex/: data  pyproject.toml
sdy/rag-llamaindex/src/rag_llamaindex/: __init__.py  cli.py  ingestion.py  llm.py  pipeline.py  query.py
sdy/rag-llamaindex/tests/: test_cli.py  test_ingestion.py  test_llm.py  test_pipeline.py  test_query.py
sdy/rag/docs/: hnsw-vs-ivfpq-deep-dive.md  nlp-metadata-extraction-guide.md  production-rag-architecture.md  rag-caching-fact-check.md  rag-caching-strategies.md  rag-core-concepts-glossary.md  rag-reranking-architecture.md  rag-serving-pipeline-architecture.md  rag-vector-db-indexing-strategies.md  sse-deep-dive.md
sdy/rag/src/rag/: cli.py  generator.py  pipeline.py  retriever.py  store.py
sdy/rag/tests/: test_cli.py  test_embedder.py  test_generator.py  test_pipeline.py  test_retriever.py  test_splitter.py
