[project]
name = "agent"
version = "0.1.0"
description = "Multi-step Agent - Drug Research with PubMed & ClinicalTrials"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent = "agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
