[project]
name = "rag-langchain"
version = "0.1.0"
description = "RAG Pipeline with LangChain framework"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.4.0",
    "typer>=0.9.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rag-lc = "rag_langchain.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_langchain"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
